Move hardcoded OreDictHandler lists to a configurable json file